RE #17 - Refatorando a controladora do cliente.

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -66,58 +66,7 @@ Naming/ClassAndModuleCamelCase:
 # Offense count: 49
 # Configuration parameters: AllowedConstants.
 Style/Documentation:
-  Exclude:
-    - 'spec/**/*'
-    - 'test/**/*'
-    - 'app/controllers/application_controller.rb'
-    - 'app/controllers/backoffice_controller.rb'
-    - 'app/controllers/home_controller.rb'
-    - 'app/controllers/office_types_controller.rb'
-    - 'app/controllers/offices_controller.rb'
-    - 'app/controllers/powers_controller.rb'
-    - 'app/controllers/profile_admins_controller.rb'
-    - 'app/helpers/application_helper.rb'
-    - 'app/helpers/home_helper.rb'
-    - 'app/helpers/office_types_helper.rb'
-    - 'app/helpers/offices_helper.rb'
-    - 'app/helpers/powers_helper.rb'
-    - 'app/helpers/profile_admins_helper.rb'
-    - 'app/mailers/application_mailer.rb'
-    - 'app/models/address.rb'
-    - 'app/models/admin.rb'
-    - 'app/models/admin_address.rb'
-    - 'app/models/admin_bank_account.rb'
-    - 'app/models/admin_email.rb'
-    - 'app/models/admin_phone.rb'
-    - 'app/models/application_record.rb'
-    - 'app/models/bank_account.rb'
-    - 'app/models/email.rb'
-    - 'app/models/filters/office_filter.rb'
-    - 'app/models/filters/power_filter.rb'
-    - 'app/models/filters/profile_admin_filter.rb'
-    - 'app/models/office.rb'
-    - 'app/models/office_bank_account.rb'
-    - 'app/models/office_email.rb'
-    - 'app/models/office_phone.rb'
-    - 'app/models/phone.rb'
-    - 'app/models/profile_admin.rb'
-    - 'config/application.rb'
-    - 'db/migrate/20230214211641_devise_create_admins.rb'
-    - 'db/migrate/20230220181409_create_profile_admins.rb'
-    - 'db/migrate/20230222004233_create_addresses.rb'
-    - 'db/migrate/20230222004414_create_admin_addresses.rb'
-    - 'db/migrate/20230222025928_create_phones.rb'
-    - 'db/migrate/20230222025957_create_admin_phones.rb'
-    - 'db/migrate/20230222032810_create_emails.rb'
-    - 'db/migrate/20230222032856_create_admin_emails.rb'
-    - 'db/migrate/20230222034009_create_bank_accounts.rb'
-    - 'db/migrate/20230222034106_create_admin_bank_accounts.rb'
-    - 'db/migrate/20230228232135_create_office_types.rb'
-    - 'db/migrate/20230301000130_create_offices.rb'
-    - 'db/migrate/20230307141733_create_office_bank_accounts.rb'
-    - 'db/migrate/20230307143321_create_office_emails.rb'
-    - 'db/migrate/20230307145615_create_office_phones.rb'
-    - 'db/migrate/20230308175927_create_powers.rb'
+  Enabled: false
 
 # Offense count: 1
 # This cop supports safe autocorrection (--autocorrect).
