Adiciona deploy ao ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,15 @@
 name: CI
-on: push
+
+on:
+  push:
+    branches:
+      - '*'
+
 jobs:
   rubocop:
     name: Rubocop
     runs-on: ubuntu-20.04
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -13,14 +19,21 @@ jobs:
         with:
           bundler-cache: true
 
-      - name: Analyze code
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle install
+
+      - name: Rubocop
         run: bundle exec rubocop
 
   rspec:
+    name: RSpec
     runs-on: ubuntu-latest
     env:
       RAILS_ENV: test
       DATABASE_URL: postgres://postgres:example@localhost:5432/db_test
+
     services:
       postgres:
         image: postgres:latest
@@ -30,15 +43,45 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: example
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 3.0.0
-    - name: Install dependencies
-      run: |
-        gem install bundler
-        bundle install
-    - name: Run RSpec
-      run: RAILS_ENV=test bundle exec rspec
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0.0
+
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle install
+
+      - name: Run RSpec
+        run: RAILS_ENV=test bundle exec rspec
+
+  deploy_staging:
+    name: Deploy to staging
+    needs: [rubocop, rspec]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master' && success()
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.0.0
+
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundle install
+
+      - name: Deploy to staging
+        run: |
+          gem install mina
+          bundle exec mina deploy staging
