Adiciona chave deploy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,3 +85,5 @@ jobs:
         run: |
           gem install mina
           bundle exec mina deploy staging
+        env:
+          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
