--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,3 +20,12 @@ Style/ClassAndModuleChildren:
 
 Metrics/ClassLength:
   Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+Layout/LineLength:
+  Enabled: false
