--- a/api/Gemfile
+++ b/api/Gemfile
@@ -8,7 +8,7 @@ gem 'ancestry', '~> 4.3' # For hierarchical tree structure of procedures
 gem 'aws-sdk-s3', require: false
 gem 'bootsnap', require: false
 gem 'devise'
-gem 'docx', github: 'brpl20/ruby-docx' # Using forked gem with universal field replacementgem 'down'
+gem 'docx-br', github: 'brpl20/docx'
 gem 'httparty'
 gem 'i18n'
 gem 'jsonapi-serializer'
