--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@rails/actioncable": "^8.0.201",
+    "@sveltejs/mcp": "^0.1.11",
     "@tailwindcss/vite": "^4.1.12",
     "@types/quill": "^2.0.14",
     "daisyui": "^5.0.50",
